--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -167,7 +167,7 @@
           <div class="settings-actions">
             <button type="button" class="btn btn--outline" id="testApiKey">Test Connection</button>
             <a href="https://openrouter.ai/keys" target="_blank" rel="noopener">Get a key ↗</a>
-            <p class="muted">Model: deepseek/deepseek-r1:free with llama fallback.</p>
+            <p class="muted">Model: deepseek/deepseek-r1-0528:free with llama-3.3-70b fallback.</p>
           </div>
         </div>
         <div class="settings-footer">
